--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </section>
 
   <!-- LINKS DE ASSUNTOS CURIOSOS COM ÂNCORAS -->
-  <section style="text-align: center; margin: 30px 0;" id="TOPO">
+  <section style="text-align: center; margin: 30px 0;" id="topo">
     <h2>Assuntos Curiosos</h2>
     <ul style="list-style: none; padding: 0;">
       <li><a href="#ancora1">🧠 Energia do Cérebro Humano</a></li>
