--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </section>
 
   <!-- LINKS DE ASSUNTOS CURIOSOS COM ÂNCORAS -->
-  <section style="text-align: center; margin: 30px 0;">
+  <section style="text-align: center; margin: 30px 0;" id="topo" >
     <h2>Assuntos Curiosos</h2>
     <ul style="list-style: none; padding: 0;">
       <li><a href="#ancora1">🧠 Energia do Cérebro Humano</a></li>
@@ -73,11 +73,10 @@
       <!-- Comentário: Esta é a âncora para "Um Dia em Vênus" -->
       <h2>🚀 Um Dia em Vênus</h2>
       <p>Vênus gira tão lentamente que um dia completo no planeta é mais longo do que o tempo que ele leva para dar uma volta ao redor do Sol.</p>
-    <p>
-     
-    </p>
     </section>
-
+    <p>
+      <a href="#topo"> TOPO </a>
+    </p>
   </main>
 
   <footer>
