--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
   <header>
     <h1>Curiosidades do Mundo</h1>
     <nav>
@@ -19,68 +20,29 @@
     </nav>
   </header>
 
-  <!-- IMAGEM DESTAQUE NO TOPO -->
-  <section style="text-align: center; margin-top: 20px;">
-    <img src="https://via.placeholder.com/800x400" alt="Imagem Curiosa" style="max-width: 100%; height: auto;">
-  </section>
-
-  <!-- LINKS DE ASSUNTOS CURIOSOS COM ÂNCORAS -->
-  <section style="text-align: center; margin: 30px 0;" id="topo" >
-    <h2>Assuntos Curiosos</h2>
-    <ul style="list-style: none; padding: 0;">
-      <li><a href="#ancora1">🧠 Energia do Cérebro Humano</a></li>
-      <li><a href="#ancora2">🐙 O Sangue Azul dos Polvos</a></li>
-      <li><a href="#ancora3">🚀 Um Dia em Vênus</a></li>
-    </ul>
-  </section>
-
-  <main>
-
-    <!-- CONTEÚDO CURIOSO ORIGINAL -->
-    <section class="curiosidade">
-      <h2>Você sabia?</h2>
-      <p>O polvo tem três corações e seu sangue é azul!</p>
-    </section>
-
-    <section class="curiosidade">
-      <h2>Curiosidade Histórica</h2>
-      <p>Cleópatra viveu mais próxima do primeiro pouso na Lua do que da construção das pirâmides!</p>
-    </section>
-
-    <section class="curiosidade">
-      <h2>Curiosidade Científica</h2>
-      <p>O DNA humano é 60% semelhante ao de uma banana!</p>
-    </section>
-
-    <!-- NOVOS CONTEÚDOS COM ÂNCORAS -->
-
-    <!-- ÂNCORA 1 -->
-    <section id="ancora1" class="curiosidade">
-      <!-- Comentário: Esta é a âncora para "Energia do Cérebro Humano" -->
-      <h2>🧠 Energia do Cérebro Humano</h2>
-      <p>O cérebro humano representa apenas 2% da massa corporal, mas consome cerca de 20% da energia total do corpo, mesmo em repouso!</p>
-    </section>
-
-    <!-- ÂNCORA 2 -->
-    <section id="ancora2" class="curiosidade">
-      <!-- Comentário: Esta é a âncora para "O Sangue Azul dos Polvos" -->
-      <h2>🐙 O Sangue Azul dos Polvos</h2>
-      <p>Os polvos possuem três corações e seu sangue é azul devido à hemocianina, uma proteína baseada em cobre que transporta oxigênio.</p>
-    </section>
-
-    <!-- ÂNCORA 3 -->
-    <section id="ancora3" class="curiosidade">
-      <!-- Comentário: Esta é a âncora para "Um Dia em Vênus" -->
-      <h2>🚀 Um Dia em Vênus</h2>
-      <p>Vênus gira tão lentamente que um dia completo no planeta é mais longo do que o tempo que ele leva para dar uma volta ao redor do Sol.</p>
-    </section>
-    <p>
-      <a href="#topo"> TOPO </a>
-    </p>
+  <main class="galeria">
+    <a href="pagina1.html">
+      <img src="https://via.placeholder.com/400x250?text=Curiosidade+1" alt="Curiosidade 1">
+      <div class="descricao">Curiosidade 1</div>
+    </a>
+    <a href="pagina2.html">
+      <img src="https://via.placeholder.com/400x250?text=Curiosidade+2" alt="Curiosidade 2">
+      <div class="descricao">Curiosidade 2</div>
+    </a>
+    <a href="pagina3.html">
+      <img src="https://via.placeholder.com/400x250?text=Curiosidade+3" alt="Curiosidade 3">
+      <div class="descricao">Curiosidade 3</div>
+    </a>
+    <a href="pagina4.html">
+      <img src="https://via.placeholder.com/400x250?text=Curiosidade+4" alt="Curiosidade 4">
+      <div class="descricao">Curiosidade 4</div>
+    </a>
+    <!-- Adicione mais imagens conforme necessário -->
   </main>
 
   <footer>
     <p>&copy; 2025 Curiosidades do Mundo. Todos os direitos reservados.</p>
   </footer>
+
 </body>
 </html>
