--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
   <main class="galeria">
     <a href="pagina1.html">
-      <img src="https://via.placeholder.com/400x250?text=Curiosidade+1" alt="Curiosidade 1">
-      <div class="descricao">Curiosidade 1</div>
+      <img src="ancora.jpg" alt="Curiosidade 1">
+      <div class="descricao">Você sabia que as âncoras dos navios é um problema para os oceanos? 1</div>
     </a>
     <a href="pagina2.html">
       <img src="https://via.placeholder.com/400x250?text=Curiosidade+2" alt="Curiosidade 2">
