--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <main class="galeria">
     <a href="pagina1.html">
       <img src="ancora.jpg" alt="Curiosidade 1">
-      <div class="descricao">Você sabia que as âncoras dos navios é um problema para os oceanos? 1</div>
+      <div class="descricao"> <a href="ancora.html"> Você sabia que as âncoras dos navios é um problema para os oceanos? </a> 1</div>
     </a>
     <a href="pagina2.html">
       <img src="https://via.placeholder.com/400x250?text=Curiosidade+2" alt="Curiosidade 2">
