--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
   <main class="galeria">
     <a href="pagina1.html">
       <img src="ancora.jpg" alt="Curiosidade 1">
-      <div class="descricao"> <a href="ancora.html"> Você sabia que as âncoras dos navios é um problema para os oceanos? </a> 1</div>
+      <div class="descricao"> <a href="ancora.html"> Você sabia que as âncoras dos navios é um problema para os oceanos?
+        <p> As âncoras, embora essenciais para a navegação, podem representar um sério problema ambiental para os oceanos. Seu impacto negativo está principalmente relacionado ao dano físico que causam nos ecossistemas marinhos, especialmente em áreas sensíveis como recifes de coral, pradarias marinhas e fundos oceânicos ricos em biodiversidade.</p> </a> </div>
     </a>
     <a href="pagina2.html">
       <img src="https://via.placeholder.com/400x250?text=Curiosidade+2" alt="Curiosidade 2">
