--- a/index.html
+++ b/index.html
@@ -16,30 +16,44 @@
         <li><a href="#">Curiosidades</a></li>
         <li><a href="#">Galeria</a></li>
         <li><a href="#">Contato</a></li>
-        <li>><a href="#">Fale conosco</a></li>
       </ul>
     </nav>
   </header>
 
   <main class="galeria">
+
     <a href="pagina1.html">
       <img src="ancora.jpg" alt="Curiosidade 1">
-      <div class="descricao"> <a href="ancora.html"> Você sabia que as âncoras dos navios é um problema para os oceanos?
-        <p> As âncoras, embora essenciais para a navegação, podem representar um sério problema ambiental para os oceanos. Seu impacto negativo está principalmente relacionado ao dano físico que causam nos ecossistemas marinhos, especialmente em áreas sensíveis como recifes de coral, pradarias marinhas e fundos oceânicos ricos em biodiversidade.</p> </a> </div>
+      <div class="manchete">
+        Você sabia que as âncoras dos navios são um problema para os oceanos?
+      </div>
+      <div class="texto-manchete">
+        <p>As âncoras, embora essenciais para a navegação, podem representar um sério problema ambiental para os oceanos. Seu impacto negativo está principalmente relacionado ao dano físico que causam nos ecossistemas marinhos, especialmente em áreas sensíveis como recifes de coral, pradarias marinhas e fundos oceânicos ricos em biodiversidade.</p>
+      </div>
     </a>
+
     <a href="pagina2.html">
-      <img src="https://via.placeholder.com/400x250?text=Curiosidade+2" alt="Curiosidade 2">
-      <div class="descricao">Curiosidade 2</div>
+      <img src="navio.png" alt="Curiosidade 2">
+      <div class="manchete">
+        Você sabia que os navios operam com geradores de energia capazes de abastecer uma cidade com mais de 80 mil habitantes. 
+      </div>
+      <div class="texto-manchete">
+        <p>Os navios, especialmente os de grande porte como cargueiros, navios de cruzeiro e petroleiros, operam com sistemas de geração de energia impressionantes, capazes de suprir a demanda elétrica de uma cidade com mais de 80 mil habitantes. Esses navios possuem geradores de alta potência, movidos geralmente a diesel ou gás, que fornecem energia para todas as operações a bordo.</p>
+      </div>
     </a>
+
     <a href="pagina3.html">
       <img src="https://via.placeholder.com/400x250?text=Curiosidade+3" alt="Curiosidade 3">
       <div class="descricao">Curiosidade 3</div>
     </a>
+
     <a href="pagina4.html">
       <img src="https://via.placeholder.com/400x250?text=Curiosidade+4" alt="Curiosidade 4">
       <div class="descricao">Curiosidade 4</div>
     </a>
+
     <!-- Adicione mais imagens conforme necessário -->
+
   </main>
 
   <footer>
