--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </a>
 
     <a href="pagina2.html">
-      <img src="navio.png" alt="Curiosidade 2">
+      <img src="navio.jpg" alt="Curiosidade 2">
       <div class="manchete">
         Você sabia que os navios operam com geradores de energia capazes de abastecer uma cidade com mais de 80 mil habitantes. 
       </div>
