--- a/index.html
+++ b/index.html
@@ -42,8 +42,18 @@
     </a>
 
     <a href="pagina3.html">
-      <img src="https://via.placeholder.com/400x250?text=Curiosidade+3" alt="Curiosidade 3">
+      <video width="250" height="250" controls>
+  <source src="video.mp4" type="video/mp4">
+
+  teste
+  </video>
+
       <div class="descricao">Curiosidade 3</div>
+      <p>O beija-flor pode bater as asas entre 50 e 80 vezes por segundo, dependendo da espécie. Isso significa que, por minuto, ele pode bater as asas entre:
+
+3.000 a 4.800 vezes por minuto (50 x 60 até 80 x 60).
+
+Algumas espécies menores e mais rápidas, como o beija-flor-de-pescoço-vermelho, podem chegar a até 90 vezes por segundo, ou 5.400 vezes por minuto.</p>
     </a>
 
     <a href="pagina4.html">
