--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
 
   teste
   </video>
-
+  <div class="manchete">
+    Você sabia que um Beija-Flor pode bater suas asas cerca de 90 vezes por segundo?
+  </div>
       <div class="descricao">Curiosidade 3</div>
       <p>O beija-flor pode bater as asas entre 50 e 80 vezes por segundo, dependendo da espécie. Isso significa que, por minuto, ele pode bater as asas entre:
 
