--- a/index.html
+++ b/index.html
@@ -50,12 +50,14 @@
   <div class="manchete">
     Você sabia que um Beija-Flor pode bater suas asas cerca de 90 vezes por segundo?
   </div>
+    <div class="texto-manchete">
       <p>O beija-flor pode bater as asas entre 50 e 80 vezes por segundo, dependendo da espécie. Isso significa que, por minuto, ele pode bater as asas entre:
 
 3.000 a 4.800 vezes por minuto (50 x 60 até 80 x 60).
 
 Algumas espécies menores e mais rápidas, como o beija-flor-de-pescoço-vermelho, podem chegar a até 90 vezes por segundo, ou 5.400 vezes por minuto.</p>
-    </a>
+</div>    
+</a>
 
     <a href="pagina4.html">
       <img src="https://via.placeholder.com/400x250?text=Curiosidade+4" alt="Curiosidade 4">
