--- a/index.html
+++ b/index.html
@@ -60,9 +60,15 @@ Algumas espécies menores e mais rápidas, como o beija-flor-de-pescoço-vermelh
 </a>
 
     <a href="pagina4.html">
-      <img src="https://via.placeholder.com/400x250?text=Curiosidade+4" alt="Curiosidade 4">
-      <div class="descricao">Curiosidade 4</div>
+      <img src="venus.png" alt="Curiosidade 4">
+      <div class="manchete">Você sabia que Vênus é o planeta mais quente do Sistema Solar? Acredite, nõ é Mercúrio! </div>
     </a>
+    <div class="texto-manchete">
+     <p> Apesar de Mercúrio ser o planeta mais próximo do Sol, ☀️ é Vênus que possui a atmosfera mais quente. É uma média impressionante de 450° C.
+
+Calor, né? Como será que seu filho ou filha desenvolveria um jeitinho de conhecer Vênus? E que tal transformar as ideias das crianças em um grande desenho sobre a primeira vez que a humanidade irá pousar em Vênus? </p>
+    </div>
+
 
     <!-- Adicione mais imagens conforme necessário -->
 
